# ded2018-square-equation-solver

./: CMakeLists.txt  Doxyfile
include/: app.h  console.h  getterapp.h  helpapp.h  mod_arith.h  setterapp.h  solverapp.h  testing.h
src/: console.cpp  getterapp.cpp  helpapp.cpp  main.cpp  setterapp.cpp  solverapp.cpp
test/: main.cpp  testing.cpp
